<resources>

    <string name="gfan_app_name">GfanPaySDK</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="submit">提交</string>
    <string name="not_login">您尚未登录</string>
    <string name="next">下一步</string>
    <string name="login">登录</string>
    <string name="login_success">登录成功</string>
    <string name="singin">登录中，请稍候</string>
    <string name="check_login">用户信息验证中，请稍候</string>
    <string name="check_choose">用户信息验证中，请稍候</string>
    <string name="login_tip">"已经拥有机锋账号？立即登录"</string>
    <string name="hint_input_username">机锋帐号</string>
    <string name="hint_input_password">密码</string>
    <string name="hint_remeber">自动登录</string>
    <string name="error_login_username">用户名不存在，请重新输入。</string>
    <string name="error_login_password">密码不正确，请重新输入。</string>
    <string name="error_login_other">登录失败，请稍候重试。</string>
    <string name="error_verify_token">你好，你的登录验证已过期，为了你的账号安全，请重新登录！</string>
    <string name="id_exit">切换用户</string>
    <string name="makesure_id_exit">确定要切换用户吗？</string>
    <string name="login_attention">只要拥有机锋账号并且登录，您就可以享受到云服务给您带来的便利生活体验~快来试试吧！</string>
    <string name="warning_login_error_unknown">服务端发生未知错误</string>
    <string name="weibo_login">新浪微博账号登录</string>
    <string name="other_account">用其它账号登录</string>
    <string name="register">注册</string>
    <string name="register_ok">注册成功</string>
    <string name="registering">注册中，请稍候</string>
    <string name="register_label">提交</string>
    <string name="hint_username">用户名</string>
    <string name="hint_password">密码</string>
    <string name="hint_confirm_password">确认密码</string>
    <string name="hint_email">邮箱</string>
    <string name="error_username_empty">用户名不能为空</string>
    <string name="error_username_length_invalid">用户名长度必须是3到15字符之间（一个汉字等于3个字符）</string>
    <string name="error_email_empty">邮箱不能为空</string>
    <string name="error_email_format_invalid">邮箱格式不正确</string>
    <string name="error_email_length_invalid">邮箱长度必须是6到32个字符之间</string>
    <string name="error_password_empty">密码不能为空</string>
    <string name="error_password_length_invalid">密码长度必须小于17个字符</string>
    <string name="error_password_not_same">密码不匹配</string>
    <string name="error_username_invalid">用户名不合法，请重新输入</string>
    <string name="error_username_exist">用户名已经被注册，请尝试其他的用户名。</string>
    <string name="error_email_invalid">您输入的邮箱格式不正确。</string>
    <string name="error_email_exist">邮箱已经被注册，请尝试其他的邮箱。</string>
    <string name="error_password_invalid">密码不合法。</string>
    <string name="error_other">失败，未知原因。</string>
    <string name="error_insure_same_the_two_password">请确保两次密码一致</string>
    <string name="register_tip">还没有机锋账号？立即创建</string>
    <string name="title_choose_account">选择您的机锋账号</string>
    <string name="add_acccount">使用其他帐号</string>
    <string name="token_error">您好，您的登录验证已过期，为了您的账号安全，请重新登录！</string>
    <string name="account_cancle">返回</string>
    <string name="account_ok">确定</string>
    <string name="gfan_login">机锋帐号登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="email">邮箱</string>
    <string name="register_hint_login">取消</string>
    <string name="error_network_time_out">网络超时，请稍候重试</string>
    <string name="error_unknown">抱歉，未知服务器端错误</string>
    <string name="error_params">参数错误，id:%d</string>
    <string name="no_data">连接失败，请检查你的网络后重试</string>
    <string name="menu_del">删除帐号</string>
    <string name="menu_cancle">取消</string>
    <string name="dialog_del">删除</string>
    <string name="dialog_del_account">删除%s帐号信息？</string>
    <string name="pay">支 付</string>
    <string name="charge">充 值</string>
    <string name="hint_pay_value">支付金额 > 0 (必填)</string>
    <string name="hint_order_id">订单号(非必填)</string>
    <string name="generate_orderid">生成定单号</string>
    <string name="uid">uid</string>
    <string name="running_number">流水号</string>
    <string name="orderid">订单号</string>
    <string name="game_login">登录游戏</string>
    <string name="game_register">注册游戏</string>
    <string name="new_role">创建新角色</string>
    <string name="paytype1">ALL</string>
    <string name="paytype2">OVERAGE</string>
    <string name="paytype3">SMS</string>
    <string name="sms_support">短信支付只支持5,10,25,50,75,100几个数量的充值.</string>
    <string name="onekey_login">免注册登录</string>
    <string name="onekey_try">免注册登录</string>
    <string name="onekeying">免注册登录中，请稍候</string>
    <string name="onekey_login_tip">随机生成用户名和密码，登录后可更改.</string>
    <string name="onekey_login_error_later">一键登录启用失败，请稍后再试。</string>
    <string name="modfiy_info">完善账号</string>
    <string name="modfiying">修改中</string>
    <string name="error_username_must_modfiy">必须使用自定义用户名</string>
    <string name="user_modfiy">完善账号</string>
    <string name="error_onekey_tips">免注册登录失败，请使用账号登录</string>
    <string name="error_only_onekey_can">只有免注册登录的账号可以修改账号</string>
    <string name="error_cannot_modify">不允许修改用户名</string>
    <string name="game_share">分享游戏</string>
    <string name="game_share_choose_way">选择分享方式</string>
    <string name="game_shareing">分享中</string>
    <string name="invite_friends">邀请机锋好友</string>
    <string name="invite_friends_getting">读取好友列表</string>
    <string name="invite_friends_success">恭喜，您成功邀请了机锋好友</string>
    <string name="app_name">SexyBeauty</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">SexyBeauty</string>
    <string name="menu_save">save</string>
    <string name="menu_feedback">feedback</string>
    <string name="menu_game">游戏</string>
    <string name="menu_category">分类</string>
    <string name="menu_auto_play">auto</string>
    <string name="menu_stop_play">stop</string>
    <string name="dialog_msg_exit">Are you to exit?</string>
    <string name="dialog_msg_set_network">Set the network status?</string>
    <string name="dialog_msg_update_client">有新版本啦！是否更新？</string>
    <string name="dialog_title_payment_waps">积分购买提示：</string>
    <string name="dialog_title_payment_gfan">机锋券购买提示：</string>
    <string name="dialog_msg_payment_waps">"继续浏览需要%d积分。提示：使用菜单键可选择分类、保存图片、自动播放。"</string>
    <string name="dialog_msg_payment_gfan">"继续浏览需要%d机锋券。提示：使用菜单键可选择分类、保存图片、自动播放。"</string>
    <string name="dialog_title_payment_tapjoy">tips：</string>
    <string name="dialog_msg_payment_tapjoy1">"You have %d coins."</string>
    <string name="dialog_msg_payment_tapjoy2">"pay for %d coin to continue。tips：use menu for more function"</string>
    <string name="button_yes">yes</string>
    <string name="button_no">no</string>
    <string name="button_pay_ok">ok</string>
    <string name="button_pay_cancel">cancel</string>
    <string name="tips_press_again_to_exit">press back again to exit</string>
    <string name="tips_loading_image">Wait for a moment,loading HD images</string>
    <string name="tips_loading_image2">loading..</string>
    <string name="tips_server_error">Sorry,temporarily unable to watch HD</string>
    <string name="tips_gfan_pay_success1">success</string>
    <string name="tips_gfan_pay_success2">购买成功,花费机锋券：%d</string>
    <string name="tips_gfan_pay_fail">failed</string>
    <string name="notification_local_notification1">Hi~有新的图片了，快来看看吧！</string>
    <string name="product_name">购买爽图</string>
    <string name="product_description">撸sir必备！高清福利无水印，极品视觉享受！</string>
    <string name="UMEmptyFbNotAllowed">Please input your feedback.</string>
    <string name="UMContentTooLong">"Your content was over 140 characters. You'll have to be more clever."</string>
    <string name="UMFbList_ListItem_State_ReSend">Fail,Press to resend</string>
    <string name="UMFbList_ListItem_State_Sending">Sending...</string>
    <string name="UMFbList_ListItem_State_Fail">Fail</string>
    <string name="UMFb_Atom_State_Fail">Fail</string>
    <string name="UMFb_Atom_State_Sending">Sending...</string>
    <string name="UMFb_Atom_State_Resend">Fail,press to resend</string>
    <string name="UMFbList_ListItem_State_Resending">Resending</string>
    <string name="UMFeedbackUmengTitle">Feedback</string>
    <string name="UMFeedbackListTitle">My Feedback</string>
    <string name="UMFeedbackConversationTitle">My Feedback</string>
    <string name="UMFeedbackTitle">Every word you write will benefit us.</string>
    <string name="UMFeedbackContent">Input your suggestions here</string>
    <string name="UMFeedbackSummit">Submit</string>
    <string name="UMFeedbackGoBack">Return</string>
    <string name="UMFeedbackGotIt">Got it</string>
    <string name="UMFeedbackSeeDetail">See Detail</string>
    <string name="UMViewThread">View Thread</string>
    <string name="UMNewReplyAlertTitle">"You've got reply"</string>
    <string name="UMDeleteThread">Delete Thread</string>
    <string name="UMViewFeedback">View Feedback</string>
    <string name="UMDeleteFeedback">Delete Feedback</string>
    <string name="UMResendFeedback">Resend Feedback</string>
    <string name="UMDeleteMsg">Delete message</string>
    <string name="UMNewReplyFlick">Got new reply</string>
    <string name="UMNewReplyTitle">Got new reply</string>
    <string name="UMNewReplyHint">Click to view</string>
    <string name="UMBreak_Network">Please make sure you are connected to internet,update failed</string>
    <string name="UMUpdateTitle">New version found</string>
    <string name="UMNewVersion">Latest version:</string>
    <string name="UMGprsCondition">(Warning: Not WIFI Condition)</string>
    <string name="UMUpdateNow">Update now</string>
    <string name="UMAppUpdate">App updating</string>
    <string name="UMNotNow">Not now</string>
    <string name="UMToast_IsUpdating">Updating...</string>
    <string name="UMDialog_InstallAPK">The lastest version has been downloaded, install now ?</string>
    <string name="umeng_xp_size">Size</string>
    <string name="umeng_xp_action_open">open</string>
    <string name="umeng_xp_action_browse">browse</string>
    <string name="umeng_xp_action_download">install</string>
    <string name="umeng_xp_network_break_alert">Please make sure you are connected to internet, download failed</string>
    <string name="umeng_xp_back_to_top">Top</string>
    <string name="umeng_xp_more">more</string>
    <string name="umeng_xp_dowloadOrNot">Download the app?</string>

</resources>
