<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@*android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@*android:color/darker_gray" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@*android:color/primary_text_dark" android:id="@id/tv_username" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="10.0dip" android:text="@string/username" />
        <TextView android:textColor="@*android:color/primary_text_dark_nodisable" android:id="@id/tv_uid" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/uid" />
        <TextView android:textColor="@*android:color/primary_text_dark" android:id="@id/tv_runningNum" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/running_number" />
        <TextView android:textColor="@*android:color/primary_text_dark_nodisable" android:id="@id/tv_order_id" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/orderid" />
    </LinearLayout>
    <RelativeLayout android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <Button android:id="@id/btn_generate_orderid" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/generate_orderid" android:layout_alignParentRight="true" />
        <EditText android:textColor="@*android:color/black" android:gravity="center_vertical" android:id="@id/et_order_id" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_order_id" android:layout_toLeftOf="@id/btn_generate_orderid" />
        <Button android:id="@id/btn_pay" android:layout_width="120.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/pay" android:layout_below="@id/et_order_id" android:layout_alignParentRight="true" />
        <EditText android:textColor="@*android:color/black" android:gravity="center_vertical" android:id="@id/et_pay_value" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:hint="@string/hint_pay_value" android:layout_toLeftOf="@id/btn_pay" android:layout_below="@id/et_order_id" android:inputType="number" />
    </RelativeLayout>
    <LinearLayout android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <Button android:id="@id/btn_login" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/login" android:layout_weight="1.0" />
        <Button android:id="@id/btn_register" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/register" android:layout_weight="1.0" />
        <Button android:id="@id/btn_logout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="注销" android:layout_weight="1.0" />
        <Button android:id="@id/btn_charge" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/charge" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <Button android:id="@id/btn_game_login" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/game_login" android:layout_weight="1.0" />
        <Button android:id="@id/btn_game_register" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/game_register" android:layout_weight="1.0" />
        <Button android:id="@id/btn_new_role" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/new_role" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <Button android:id="@id/btn_modfiy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/user_modfiy" android:layout_weight="0.02" />
        <Button android:id="@id/btn_isonekey" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="是否游客账号" android:layout_weight="0.04" />
    </LinearLayout>
    <LinearLayout android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <Button android:id="@id/btn_share" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/game_share" android:layout_weight="0.04" />
        <Button android:id="@id/btn_invite" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="邀请论坛好友" android:layout_weight="0.02" />
    </LinearLayout>
    <LinearLayout android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <Button android:id="@id/btn_iftttdev" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="启动开发者消息推送" android:layout_weight="0.02" />
        <Button android:id="@id/btn_iftttdevstop" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="停止开发者消息推送" android:layout_weight="0.02" />
    </LinearLayout>
</LinearLayout>