<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@drawable/gfan_bg_border" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/top_bar" android:layout_alignParentTop="true" layout="@layout/gfan_top_bar_login" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/top_bar">
        <LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/tv_notice" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <EditText android:textColorHint="@color/text_hint" android:id="@id/et_username" android:background="@drawable/gfan_input_text_blue" android:layout_width="fill_parent" android:layout_height="42.0dip" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:hint="@string/username" android:singleLine="true" android:maxLength="15" android:inputType="textNoSuggestions" />
            <EditText android:textColorHint="@color/text_hint" android:id="@id/et_email" android:background="@drawable/gfan_input_text_blue" android:layout_width="fill_parent" android:layout_height="42.0dip" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:hint="@string/email" android:singleLine="true" android:maxLength="32" />
            <EditText android:textColorHint="@color/text_hint" android:id="@id/et_password" android:background="@drawable/gfan_input_text_blue" android:layout_width="fill_parent" android:layout_height="42.0dip" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:hint="@string/password" android:maxLength="16" android:inputType="textPassword" />
            <EditText android:textColorHint="@color/text_hint" android:id="@id/et_password2" android:background="@drawable/gfan_input_text_blue" android:layout_width="fill_parent" android:layout_height="42.0dip" android:layout_marginTop="5.0dip" android:layout_marginBottom="10.0dip" android:hint="@string/confirm_password" android:maxLength="16" android:inputType="textPassword" />
            <LinearLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <Button android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/text_blue" android:gravity="center" android:id="@id/btn_cancel" android:background="@drawable/gfan_selector_btn_blue" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="wrap_content" android:layout_height="42.0dip" android:text="@string/register_hint_login" android:layout_weight="1.0" />
                <Button android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/text_orange" android:layout_gravity="center" android:id="@id/btn_modfiy" android:background="@drawable/gfan_selector_btn_orange" android:layout_width="wrap_content" android:layout_height="42.0dip" android:layout_marginLeft="10.0dip" android:text="@string/modfiy_info" android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>