<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:background="@color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center_horizontal" android:background="@drawable/gfan_bg_border" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <include android:id="@id/top_bar" android:layout_alignParentTop="true" layout="@layout/gfan_top_bar_login" />
        <RelativeLayout android:gravity="right|center" android:id="@id/layout_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:layout_below="@id/top_bar">
            <EditText android:textColorHint="@color/text_hint" android:id="@id/et_username" android:background="@drawable/gfan_input_text_blue" android:layout_width="fill_parent" android:layout_height="42.0dip" android:hint="@string/hint_input_username" android:singleLine="true" />
            <TextView android:id="@id/to_choose_account_margin" android:layout_width="wrap_content" android:layout_height="42.0dip" android:text="" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
            <Button android:gravity="right" android:id="@id/to_choose_account" android:background="@drawable/down" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toLeftOf="@id/to_choose_account_margin" android:layout_alignParentTop="true" />
        </RelativeLayout>
        <EditText android:textColorHint="@color/text_hint" android:id="@id/et_password" android:background="@drawable/gfan_input_text_blue" android:layout_width="fill_parent" android:layout_height="42.0dip" android:layout_margin="8.0dip" android:hint="@string/hint_input_password" android:password="true" android:singleLine="true" android:layout_below="@id/layout_name" />
        <LinearLayout android:id="@id/layout_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_below="@id/et_password" android:layout_alignLeft="@id/et_password" android:layout_alignRight="@id/et_password">
            <Button android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/text_blue" android:gravity="center" android:id="@id/btn_onekey_login" android:background="@drawable/gfan_selector_btn_blue" android:layout_width="wrap_content" android:layout_height="42.0dip" android:layout_marginRight="10.0dip" android:text="@string/onekey_try" android:layout_weight="0.3" />
            <Button android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/text_orange" android:gravity="center" android:id="@id/btn_login" android:background="@drawable/gfan_selector_btn_orange" android:layout_width="wrap_content" android:layout_height="42.0dip" android:layout_marginLeft="10.0dip" android:text="@string/login" android:layout_weight="0.3" />
        </LinearLayout>
        <TextView android:gravity="left" android:id="@id/tv_regist" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:text="@string/register_tip" android:layout_below="@id/layout_btn" android:layout_alignParentLeft="true" />
    </RelativeLayout>
</LinearLayout>